Creation of asignar periodos templates and views

--- a/templates/base.html
+++ b/templates/base.html
@@ -152,6 +152,7 @@
                 <li><a href="{% url 'agregarusuario' %}">Usuarios</a></li>
                 <li><a href="{% url 'asignarroles' %}">Roles</a></li>
                 <li><a href="{% url 'agregarperiodo' %}">Periodos</a></li>
+                <li><a href="{% url 'agregarperiodoporusuario' %}">Periodo por Usuario</a></li>
               </ul>
             </li>
             {% endif %}
