Working add periodo to all users

--- a/templates/usuarios/tabla-agregarperiodo.html
+++ b/templates/usuarios/tabla-agregarperiodo.html
@@ -11,7 +11,7 @@
  </thead>
  <tbody>
     {% for user in usuarios %}
-    <tr>
+    <tr class="clickable-row">
       <td style="width: 3px">
         <input type="checkbox" name="seleccionado">
       </td>
