--- a/templates/usuarios/agregarperiodo.html
+++ b/templates/usuarios/agregarperiodo.html
@@ -6,6 +6,23 @@
 	{{block.super}}
 {% endblock css %}
 {% block content %}
+	{% if messages %}
+			{% for message in messages %}
+			{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+			<div class="alert alert-danger">	
+			{% endif %}
+			{% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+			<div class="alert alert-success">	
+			{% endif %}
+			{% if message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+			<div class="alert alert-warning">	
+			{% endif %}
+			<button class="close" data-dismiss="alert"><span>&times;</span></button>
+				<strong>Alerta!</strong> {{message}}	
+			</div>
+			{% endfor %}
+	{% endif %}
+	<br>
 	<h3 class="text-center">
 	<div class="panel panel-default">
 		<div class="panel-heading">
@@ -30,7 +47,8 @@
 						<form action="" class="form-inline" method="post" role="form">
 							{% csrf_token %}
 							<div class="form-group">
-								<input type="text" value="{{fecha}}" readonly="readonly" class="form-control">
+								<input type="text" name="fecha" value="{{fecha}}" readonly="readonly" class="form-control">
+								<input type="hidden" name="lista">
 							</div>
 							<div class="form-group">
 								<button class="btn btn-primary" type="submit"><span class="glyphicon glyphicon-plus"></span> Agregar Periodo</button>
@@ -58,12 +76,14 @@
 				$(this).parent().addClass("active");
 				$("input#id_tipo").val("LOSEP");
 				$("form#tipos").submit();
+				seleccionados = [];
 			});
 			$("a[href=\"#2\"]").on("click",function(){
 				$(this).parent().siblings().removeClass("active");
 				$(this).parent().addClass("active");
 				$("input#id_tipo").val("Codigo de Trabajo");
 				$("form#tipos").submit();
+				seleccionados = [];
 			});
 			$("form#tipos").on("submit",function(event){
 				event.preventDefault();
@@ -84,6 +104,19 @@
 			        }
 				});
 			}
+			var seleccionados = [];
+			$("div#users").on("change","input[type=checkbox]",function(){
+				var id = $(this).parent().next().text();
+				if($(this).is(":checked")){
+					if(seleccionados.indexOf(id)==-1){
+						seleccionados.push(id);	
+					}
+				}else{
+					var pos = seleccionados.indexOf(id);
+					seleccionados.splice(pos,1);
+				}
+				$("input[name=lista]").val(seleccionados);
+			});
 		});
 	</script>
 {% endblock javascript %}
