--- a/templates/base.html
+++ b/templates/base.html
@@ -143,21 +143,30 @@
             <li class="active">
               <a href="{% url 'base' %}"><i class='glyphicon glyphicon-dashboard'></i> <span>Inicio</span></a>
             </li>
-            {% if perms.usuarios.registrar_usuarios %}
             <li>
-              <a href="#"><i class='glyphicon glyphicon-book'></i><span>Registrar</span>
+              <a href="#"><i class='glyphicon glyphicon-user'></i><span>Usuarios</span>
               <div class="pull-right"><span class="glyphicon glyphicon-menu-down"></span></div>
               </a>
               <ul class="nav nav-second-level">
-                <li><a href="{% url 'agregarusuario' %}">Usuarios</a></li>
-                <li><a href="{% url 'asignarroles' %}">Roles</a></li>
-                <li><a href="{% url 'agregarperiodo' %}">Periodos</a></li>
-                <li><a href="{% url 'agregarperiodoporusuario' %}">Periodo por Usuario</a></li>
+                <li><a href="{% url 'agregarusuario' %}">Agregar Usuario</a></li>
+                <li><a href="{% url 'verusuarios' %}">Ver Usuarios</a></li>
+                <li><a href="#">Dar de Baja</a></li>
               </ul>
             </li>
-            {% endif %}
             <li>
-              <a href="#"><i class='glyphicon glyphicon-user'></i> <span>Permisos</span>
+              <a href="{% url 'asignarroles' %}"><i class='glyphicon glyphicon-book'></i><span>Roles</span></a>
+            </li>
+            <li>
+              <a href="#"><i class='glyphicon glyphicon-flag'></i><span>Periodos</span>
+              <div class="pull-right"><span class="glyphicon glyphicon-menu-down"></span></div>
+              </a>
+              <ul class="nav nav-second-level">
+                <li><a href="{% url 'agregarperiodo' %}">Agregar Período</a></li>
+                <li><a href="{% url 'agregarperiodoporusuario' %}">Agregar Período por Usuario</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#"><i class='glyphicon glyphicon-pencil'></i> <span>Permisos</span>
               <div class="pull-right"><span class="glyphicon glyphicon-menu-down"></span></div></a>
               <ul class="nav nav-second-level">
                 {% if perms.usuarios.pedir_permiso %}
@@ -169,7 +178,7 @@
                 {% endif %}
               </ul>
             </li>
-            <li><a href="#"><i class='glyphicon glyphicon-pencil'></i> <span>Vacaciones</span>
+            <li><a href="#"><i class='glyphicon glyphicon-calendar'></i> <span>Vacaciones</span>
             <div class="pull-right"><span class="glyphicon glyphicon-menu-down"></span></div>
             </a>
               <ul class="nav nav-second-level">
