Fixing ver usuarios

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap-theme.min.css" %}">
     <link href="{% static "css/vendor/AdminLTE.min.css"%}" rel="stylesheet" type="text/css" />
     <link href="{% static "css/vendor/skins/skin-blue.min.css"%}" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="{% static "img/favicon.ico" %}">
     {% endblock css %}
 
   </head>
