--- a/templates/usuarios/tablausuarios.html
+++ b/templates/usuarios/tablausuarios.html
@@ -1,7 +1,7 @@
 <table class="table table-bordered table-responsive text-center">
  <thead>
    <tr>
-    <th>Eliminar</th>
+    <th>Revocar</th>
      <th>Cédula</th>
      <th>Nombre</th>
      <th>Apellido</th>
