--- a/templates/usuarios/modificarusuario.html
+++ b/templates/usuarios/modificarusuario.html
@@ -23,6 +23,10 @@
 		<div class="col-xs-12 col-md-6">
 			<div class="panel panel-default">
 				<div class="panel-body">
+					<div class="pull-left">
+						<a href="{% url 'verusuarios' %}" class="btn btn-default"><span class="glyphicon glyphicon-menu-left"></span> Regresar</a>
+					</div>
+					<br>
 					<h3 class="text-center">Modificar Usuario</h3>
 					<form action="" method="post" enctype="multipart/form-data" class="form" role="form">
 						{% csrf_token %}
@@ -73,21 +77,6 @@
 			</div>
 		</div>
 		<div class="col-sm-3 hidden-xs hidden-sm">
-		</div>
-	</div>
-	<div class="modal fade" id="modal-baja">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					
-				</div>
-				<div class="modal-body">
-					
-				</div>
-				<div class="modal-footer">
-					
-				</div>
-			</div>
 		</div>
 	</div>
 {% endblock content %}
